tests/fsharp/typecheck/sigs/neg19.bsl

neg19.fs(5,25,5,41): parse error FS1154: This number is outside the allowable range for decimal literals

neg19.fs(6,28,6,44): parse error FS1154: This number is outside the allowable range for decimal literals

neg19.fs(13,33,13,62): parse error FS1184: A getter property may have at most one argument group

neg19.fs(14,33,14,75): parse error FS1184: A getter property may have at most one argument group

neg19.fs(15,33,15,64): parse error FS1185: A setter property may have at most two argument groups

neg19.fs(15,33,15,64): parse error FS0559: Property setters must be defined using 'set value = ', 'set idx value = ' or 'set (idx1,...,idxN) value = ... '

neg19.fs(16,36,16,65): parse error FS1184: A getter property may have at most one argument group

neg19.fs(17,36,17,78): parse error FS1184: A getter property may have at most one argument group

neg19.fs(18,36,18,67): parse error FS1185: A setter property may have at most two argument groups

neg19.fs(18,36,18,67): parse error FS0559: Property setters must be defined using 'set value = ', 'set idx value = ' or 'set (idx1,...,idxN) value = ... '
